<resources>
    <string name="app_name" translatable="false">Zelf Name Service</string>
    <string name="permissions_needed">Camera and disk write permissions are needed to
        capture images</string>
    <string name="settings">Settings</string>
    <string name="invalid_qr">Invalid QR</string>
    <string name="yes">Yes</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="success">Success</string>
    <string name="ok">Ok</string>
    <string name="qr_code_is_saved_to_the_gallery">QR code is saved to the gallery</string>
    <string name="initialization_error">Initialization Error</string>
    <string name="initialization_error_detail">App could not be initialized.
        Please check available storage space/memory</string>
    <string name="value_clear_data">John Doe</string>
    <string name="name_clear_data">Name</string>
    <string name="reloading_sdk">Reloading the SDK</string>
    <string name="invalid_license_file">Invalid License File</string>
    <string name="invalid_license_file_detail">The license file bundled with this
        app is invalid</string>
    <string name="license_not_found">License Not Found</string>
    <string name="license_not_found_detail">App needs a valid mobile.lic license file to
        enable SDK functionality</string>
    <string name="go_left">Go left</string>
    <string name="go_right">Go right</string>
    <string name="invalid_print">Invalid Zelfcrypt</string>
    <string name="in_license_error">Invalid License Error</string>
    <string name="invalid_license_error">The server is unable to validate its license..
        Please contact support@verifik.co</string>
    <string name="generation_exceeded">QR Code Generation Limit Reached</string>
    <string name="verification_exceeded">Qr Code Verification Limit Reached</string>
    <string name="limit_exceed_title">You have exceeded your quota.
        Please contact your support@verifik.co for support.</string>
    <string name="err_signature_failed">Zelfcrypt signature failed</string>
    <string name="server_auth_failed">Server authentication failed.</string>
    <string name="server_unreachable">Server unreachable</string>
    <string name="image_decode_failed">Image Decode Failed</string>
    <string name="err_parse_detail">This application is unable to interpret the provided QR code,
        which might originate from or be intended for a different Issuer/Verifier.</string>
    <string name="err_multiple_faces_detected">Multiple faces are detected</string>
    <string name="adjust_face">Adjust your face to the centre and look at camera</string>
    <string name="no_occlusion">Remove occlusions: sunglasses,\n mask, hat etc.</string>
    <string name="device_not_genuine">Authenticity Check Failed</string>
    <string name="device_not_genuine_detail">This device is not linked to a Google Play account.</string>
    <string name="server_unreachable_detail">Could not validate mobile license. Please restore network connectivity and retry.</string>
    <string name="instance_exceeded">Device Limit Reached</string>
    <string name="instance_exceeded_detail">You have reached the maximum number of devices allowed.</string>
    <string name="no_match_detail">Presented face doesn\'t match with the QR code</string>
    <string name="liveness_retry_text">Try again but with the following guide.</string>
    <string name="face_good_lighting">Face needs to be clear with good lighting.</string>
    <string name="keep_stable_hand">Maintain a steady hand and avoid shaking.</string>
    <string name="multiple_faces_detail">Do not have multiple people present during a session.</string>
    <string name="move_gently">Move gently</string>
    <string name="too_much_movement">There was too much movement.</string>
    <string name="extreme_detail1">Avoid large sideways movements.</string>
    <string name="extreme_detail2">Avoid titling your head from side to side.</string>
    <string name="extreme_detail3">Avoid large up and down movements.</string>
    <string name="time_out">Time out</string>
    <string name="required_actions_detected">Required actions could not be detected.</string>
    <string name="follow_instructions">Please follow the actions indicated to complete
        your face scan.</string>
    <string name="liveness_failure">Liveness failure</string>
    <string name="ensure_live_face">Ensure it is a live face and not an image.</string>
    <string name="logout">Logout</string>
    <string name="logout_desc">Are you sure you want to logout?</string>
    <string name="no_zns_found">ZNS not found</string>
    <string name="no_zns_found_desc">No ZNS was found, please try again.</string>
    <string name="activity_open_wallet_title">Open an existent wallet</string>
    <string name="activity_open_wallet_select_qr">Select QR code from gallery</string>
    <string name="activity_open_wallet_take_qr_photo">Take QR from camera</string>
    <string name="main_wallet_menu_all_addresses">All addresses</string>
    <string name="main_wallet_menu_sign_out">Logout</string>
    <string name="wallet_account_menu_see_on_explorer">See on explorer etherscan.io</string>
    <string name="wallet_account_menu_delete">Delete</string>
    <string name="activity_onboarding_title_1">Welcome to ZELF Name Service</string>
    <string name="activity_onboarding_desc_1">Discover SNS (Seed Name Service) by Zelf, the
        innovative name service that frees you from remembering the seed phrase.
        Access securely and quickly using your ZNS.
    </string>
    <string name="activity_onboarding_title_2">Access with ZelfProof</string>
    <string name="activity_onboarding_desc_2">ZelfProof (ZK-Face SNARKs) is a unique,
        privacy-preserving binary representation derived from facial data, ensuring that
        no biometric information is stored or retained during the process.
    </string>
    <string name="activity_onboarding_title_3">IPFS - Decentralized Storage</string>
    <string name="activity_onboarding_desc_3">Effortless access to your wallet and seed phrase.
        Your ZelfProof is securely stored on a decentralized IPFS network, giving you complete
        control without the hassle of managing it yourself.
    </string>
    <string name="activity_main_search_title">Don\'t lose your CRYPTO ever again.</string>
    <string name="activity_main_search_hint">Search name</string>
    <string name="activity_main_search_zelf">.zelf</string>
    <string name="activity_main_search_desc">search</string>
    <string name="activity_main_remember_user_name">Don\'t remember username?</string>
    <string name="activity_main_search_button">Search</string>
    <string name="activity_create_zns_subheader">Available</string>
    <string name="activity_create_zns_register">Register</string>
    <string name="activity_create_zns_period_desc">You’ll register this name for 1 year.</string>
    <string name="activity_create_zns_period_harcode_period">1 year</string>
    <string name="activity_create_zns_until_">Register until %s</string>
    <string name="activity_create_zns_accept_the_">I agree to the</string>
    <string name="activity_create_zns_terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="activity_create_zns_create_button">Create a new wallet</string>
    <string name="activity_create_zns_import_button">Import an existing wallet</string>
    <string name="activity_open_zns_subheader">Registered</string>
    <string name="activity_open_zns_title">ZELF NAME FOUND</string>
    <string name="activity_open_zns_title2">ZELFPROOF FOUND</string>
    <string name="activity_open_zns_desc">The following public addresses were found:</string>
    <string name="activity_open_zns_eth_address">ETH Address</string>
    <string name="activity_open_zns_solana_address">Solana Address</string>
    <string name="activity_open_zns_login_button">Login</string>
    <string name="activity_1224_subheader">1 OF 4 <b>WALLET</b></string>
    <string name="activity_1224_title">Zelfproof Encryption</string>
    <string name="activity_1224_phrase_1">You private recovery phrase consists of 12 or 24 words,
        essential for accessing and securing your wallet.</string>
    <string name="activity_1224_phrase_2">Zelf Wallet removes the need for manual storage by
        encrypting your recovery phrase into a powerful, priavacy-preserving ZelfProof.
        This ZelfProof is securely stored within a QR code that only you can decrypt,
        ensuring unparalleled security.</string>
    <string name="activity_1224_safeguard_1">The QR code serves as a robust digital vault for your
        recovery keys, enhanced by our Zelf Name Service (ZNS). With ZNS, you can easily back up
        and retrieve your QR code using your Zelf Name.</string>
    <string name="activity_1224_safeguard_2"></string>
    <string name="activity_1224_textinputplaceholder">12 or 24 words phrase</string>
    <string name="activity_1224_i_understand_no_recover">I understand that Zelf can helo retrieve
        the QR code with ZNS. However, I am still responsible for
        safeguarding it to ensure secure access.</string>
    <string name="activity_1224_more_info">More information</string>
    <string name="activity_1224_12_option">12 Words Phrase</string>
    <string name="activity_1224_24_option">24 Words Phrase</string>
    <string name="activity_1224_button_start_biometric">Start Biometric Encryption</string>
    <string-array name="activity_1224_options">
        <item>12 words</item>
        <item>24 words</item>
    </string-array>
    <string name="activity_password_subheader1">2 OF 4 <b>PASSWORD</b></string>
    <string name="activity_password_title">Safety Layers</string>
    <string name="activity_password_desc">Zelf Wallet, by default, encrypts the wallet with the
        user\'s facial biometrics. The following password is an optional encryption security layer
        for this device only.</string>
    <string name="activity_password_placeholder_password">Password (optional)</string>
    <string name="activity_password_placeholder_confirm_password">Confirm password</string>
    <string name="activity_password_i_understand_no_recover">I understand that Zelf Wallet cannot
        recover this password and that by opting for this second layer of security, I am
        solely responsible for remembering it.</string>
    <string name="activity_password_more_info">More information</string>
    <string name="activity_password_button_create_password">Two safety layers</string>
    <string name="activity_password_button_just_biometric">One safety layers</string>
    <string name="activity_password_error_empty_password">Please provide a password</string>
    <string name="activity_password_error_empty_confirm_password">Please provide a confirm
        password</string>
    <string name="activity_password_error_different_password">Confirmation password
        does not match</string>
    <string name="activity_qr_scanner_header">QR Scanner</string>
    <string name="activity_qr_scanner_subheader">1 OF 4 <b>OPEN ZELF PROOF</b></string>
    <string name="activity_qr_scanner_instructions">Please place QR code within frame</string>
    <string name="activity_face_instructions_subheader">3 OF 4 <b>ENCRYPT</b></string>
    <string name="activity_face_instructions_title">Zelfproof Encryption</string>
    <string name="activity_face_instructions_desc">You are about to do a liveness detection to
        create a ZelfProof, which will securely encrypt your recovery phrases. Follow the steps to
        ensure a smooth and effective process.
    </string>
    <string name="fragment_contacts_return">Return</string>
    <string name="fragment_contacts_search_hint">Blockchain name or ID</string>
    <string name="fragment_contacts_button_add_address">Add address</string>
</resources>