<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zBackground"
    tools:context=".ui.activity.createwallet.PasswordActivity">

    <include
        android:id="@+id/tabBar"
        layout="@layout/action_bar_steps" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/zTextColor" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#E3E3E3"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/activity_password_title"
                android:layout_gravity="center"
                android:fontFamily="@font/menda_bold"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/zTextColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/activity_password_desc"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/zTextColor"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_pssw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/activity_password_placeholder_password"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_pssw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_confirm_pssw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/activity_password_placeholder_confirm_password"
                app:endIconMode="password_toggle"
                app:boxStrokeErrorColor="#F27274"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_confirm_pssw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center">

                <CheckBox
                    android:id="@+id/checkbox_accept_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="top"
                    app:buttonTint="@color/zTextColor"
                    android:text="@string/activity_password_i_understand_no_recover" />

                <TextView
                    android:id="@+id/textview_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/activity_password_more_info"
                    android:textColor="@color/zPrimary"
                    android:layout_marginStart="30dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="5dp"
        android:text="@string/activity_password_button_create_password"
        android:textAllCaps="false"
        android:enabled="false"
        style="@style/button_positive_1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_no_pssw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/activity_password_button_just_biometric"
        android:textAllCaps="false"
        style="@style/button_positive_1_border"/>

</LinearLayout>