<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zBackground"
    tools:context=".ui.activity.createwallet.TwelveTwentyFourActivity">

    <include
        android:id="@+id/tabBar"
        layout="@layout/action_bar_steps" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/zTextColor" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#E3E3E3"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/activity_1224_title"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/menda_bold"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/zTextColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/activity_1224_phrase_1"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/zTextColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/activity_1224_phrase_2"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/zTextColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/activity_1224_safeguard_1"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/zTextColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/activity_1224_safeguard_2"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/zTextColor"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center">

                <CheckBox
                    android:id="@+id/checkbox_accept_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="top"
                    app:buttonTint="@color/zTextColor"
                    android:text="@string/activity_1224_i_understand_no_recover" />

                <TextView
                    android:id="@+id/textview_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi"
                    android:text="@string/activity_1224_more_info"
                    android:textColor="@color/zPrimary"
                    android:layout_marginStart="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardview_word24"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/zSelectedWordCardBackground"
                    app:strokeColor="@color/zSelectedWordCardBackground"
                    app:strokeWidth="1dp"
                    app:rippleColor="@color/zButtonRippleColor"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">
                    <TextView
                        android:id="@+id/textview_word24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_1224_24_option"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/zSelectedWordCardText"
                        android:textSize="14sp"/>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardview_word12"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="@color/zWordCardBackground"
                    app:strokeColor="@color/zWordCardText"
                    app:strokeWidth="1dp"
                    app:rippleColor="@color/zButtonRippleColor"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">
                    <TextView
                        android:id="@+id/textview_word12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_1224_12_option"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/zWordCardText"
                        android:textSize="14sp"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/activity_1224_button_start_biometric"
        android:textAllCaps="false"
        android:enabled="false"
        style="@style/button_positive_1"/>

</LinearLayout>