<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionGroup="true"
    android:background="@color/zBackground"
    tools:context=".ui.fragment.wallet.contacts.ContactsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textview_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_contacts_return"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            android:textColor="@color/zPrimary"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/fragment_contacts_search_hint"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <ListView
        android:id="@+id/listview_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:textAllCaps="false"
        android:text="@string/fragment_contacts_button_add_address"
        style="@style/button_positive_1_border"/>


</LinearLayout>